name:                   twentyfour
version:                0.1.0.0
synopsis:
    Compilation of Oliver Charles' Twenty Four days of Hackage, 2013 edition
description:
    This combines every sample from Oliver Charles' Twenty Four days of Haskell
    into an easily compilable repository.
license:                BSD3
license-file:           LICENSE
author:                 Oliver Charles
maintainer:             Alexandre Boily <alexandreboily@gmail.com>
category:               Graphics
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     src/scotty/landing.html

executable linear
    hs-source-dirs:     src/linear
    main-is:            Main.hs
    ghc-options:        -Wall
    build-depends:
        base >=4.6 && <4.7,
        distributive ==0.3.*,
        lens ==3.10.*,
        linear ==1.3.*,
        OpenGL ==2.9.*,
        OpenGLRaw ==1.4.*,
        SDL2 ==0.1.*,
        text ==0.11.*,
        vector ==0.10.*
    default-language:   Haskell2010

executable tasty
    hs-source-dirs:     src/tasty
    main-is:            Main.hs
    ghc-options:        -Wall
    build-depends:
        base >=4.6 && <4.7,
        tasty ==0.4.*,
        tasty-hunit ==0.4.*,
        tasty-smallcheck ==0.2.*
    default-language:   Haskell2010

executable extensible-effects
    hs-source-dirs:     src/extensible-effects
    main-is:            Main.hs
    ghc-options:        -Wall
    build-depends:
        base >=4.6 && <4.7,
        extensible-effects ==1.2.*
    default-language:   Haskell2010

executable scotty
    hs-source-dirs:     src/scotty
    main-is:            Main.hs
    ghc-options:        -Wall
    build-depends:
        base >=4.6 && <4.7,
        aeson ==0.6.*,
        http-types ==0.8.*,
        scotty ==0.6.*,
        transformers ==0.3.*
    default-language:   Haskell2010

executable persistent
    hs-source-dirs:     src/persistent
    main-is:            Main.hs
    ghc-options:        -Wall
    build-depends:
        base ==4.6.*,
        esqueleto ==1.3.*,
        monad-control ==0.3.*,
        monad-logger ==0.3.*,
        persistent ==1.2.*,
        persistent-sqlite ==1.2.*,
        persistent-template ==1.2.*,
        resourcet ==0.4.*,
        text ==0.11.*,
        time,
        transformers ==0.3.*
    default-language:   Haskell2010

executable threepenny-gui
    hs-source-dirs:     src/threepenny-gui
    main-is:            Main.hs
    ghc-options:        -Wall
    build-depends:
        base ==4.6.*,
        containers,
        stm ==2.4.*,
        threepenny-gui ==0.4.*
    default-language:   Haskell2010

executable data-memocombinators
    hs-source-dirs:     src/data-memocombinators
    main-is:            Main.hs
    ghc-options:        -Wall
    build-depends:
        base ==4.6.*,
        data-memocombinators ==0.5.*
    default-language:   Haskell2010

executable sbv
    hs-source-dirs:     src/sbv
    main-is:            Main.hs
    ghc-options:        -Wall
    build-depends:
        base ==4.6.*,
        sbv ==2.10.*
    default-language:   Haskell2010

-- FIXME gloss

executable heist
    hs-source-dirs:     src/heist
    main-is:            Main.hs
    ghc-options:        -Wall
    build-depends:
        base ==4.6.*,
        blaze-builder ==0.3.*,
        bytestring,
        either ==4.0.*,
        heist ==0.13.*,
        text,
        transformers ==0.3.*,
        xmlhtml ==0.2.*
    default-language:   Haskell2010

executable pandoc
    hs-source-dirs:     src/pandoc
    main-is:            Main.hs
    ghc-options:        -Wall
    build-depends:
        base ==4.6.*,
        blaze-html ==0.6.*,
        pandoc ==1.12.*
    default-language:   Haskell2010

executable async
    hs-source-dirs:     src/async
    main-is:            Main.hs
    ghc-options:        -Wall
    build-depends:
        base ==4.6.*,
        async ==2.0.*
    default-language:   Haskell2010

executable acid-state
    hs-source-dirs:     src/acid-state
    main-is:            Main.hs
    ghc-options:        -Wall
    build-depends:
        base ==4.6.*,
        acid-state ==0.12.*,
        containers,
        mtl ==2.1.*,
        safecopy ==0.8.*,
        time
    default-language:   Haskell2010

executable time
    hs-source-dirs:     src/time
    main-is:            Main.hs
    ghc-options:        -Wall
    build-depends:
        base ==4.6.*,
        old-locale,
        time
    default-language:   Haskell2010
